# mcp-commit-story

./: .coverage  .gitignore  .mcp-commit-storyrc.yaml  .mcp-commit-storyrc.yaml.example  .mcp-journalrc.yaml.example  CONTRIBUTING.md  CURSOR_CHAT_IMPLEMENTATION.md  LICENSE  PATH_TO_MVP.md  README.md  ai_filtering_analysis.txt  ai_filtering_test_results.txt  blog-post-7-hour-debugging-cascade-story.md  blog-post-castle-unstable-ground.md  chat_data_last_48h.json  conftest.py  cursor_chat_sample.json  day-02-sample-journal-entry.md  day-03-sample-journal-entry.md  demonstrate_ai_orchestration.py  diagnostic_test.txt  engineering-mcp-journal-spec-final.md  fictional-user-story.md  generate_journal_entry.py  generate_missing_summaries.py  ideal-daily-summary-prompt.md  integration_test.txt  journal_entry_simulation.py  journal_refactoring_analysis.md  multi_user_conversation.md  package-lock.json  package.json  pyproject.toml  pytest.ini  raw_database_data.json  requirements.txt  sample-journal-entry.md  talk_plan_how_to_trust_a_liar.md  task-50-simplified.md  task-64-subtasks-plan.md  (+11 more)
.claude/: settings.local.json
.cursor/: mcp.json  memory.json
.taskmaster/: config.json  state.json
docs/: README.md  ai-context-capture-guide.md  ai-knowledge-capture-guide.md  ai-provider-setup.md  ai_function_pattern.md  architecture.md  chat-integration-guide.md  context-collection.md  cursor-chat-api-reference.md  cursor-chat-database-research.md  cursor-chat-discovery.md  cursor-chat-setup-guide.md  cursor-database-implementation.md  cursor-database-setup.md  cursor-db-api-guide.md  cursor-db-implementation-notes.md  daily-summary-mcp.md  git_diff_collection.md  git_hook_background_mode.md  implementation-guide.md  journal-behavior.md  journal-core.md  journal_init.md  mcp-api-specification.md  multi-exporter.md  on-demand-directory-pattern.md  prd.md  reflection-core.md  server_setup.md  setup-cli.md  setup.md  signal-format.md  structured-logging.md  summary-generation.md  telemetry.md  testing_standards.md
scripts/: agent_model_test_harness.py  analyze_message_counts.py  archive_completed_tasks.py  explore_cursor_databases.py  mcp-commit-story-prd.md  message_limit_research_findings.txt  run_tests.sh  setup_test_env.sh
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  task_037.txt  task_038.txt  task_039.txt  task_040.txt  (+41 more)
tests/: conftest.py  test_datadog_enhancement.py  test_journal_entry.py  test_journal_orchestrator.py  test_journal_telemetry.py  test_mcp_server_telemetry_integration.py  test_multi_exporter_config.py  test_reflection_core.py  test_server_orchestration_integration.py  test_structured_logging.py  test_structured_logging_integration.py  (+2 more)
(+404 files in other folders)
