[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-commit-story"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for engineering commit story journal entries."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "python-dateutil>=2.8.0",
    "opentelemetry-api>=1.15.0",
    "opentelemetry-sdk>=1.15.0",
    "opentelemetry-exporter-otlp>=1.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "toml>=0.10.0"
]

[project.scripts]
mcp-commit-story = "mcp_commit_story.cli:main" 